erDiagram
    %% Clan Domain
    Clan {
        uuid id PK
        uuid ownerId FK
        string name UK
        string tag UK
        string description "Nullable"
        timestamp created_at
        timestamp updated_at
    }

    %% User Domain (Global Account)
    User {
        uuid id PK
        string username UK "로그인 ID"
        string battleTag UK "표시용 배틀태그"
        string password "Nullable"
        enum role "USER, ADMIN"
        enum mainRole "TANK, DPS, SUPPORT, FLEX"
        int rating
        string avatarUrl
        boolean bettingFloatingEnabled "베팅 플로팅 버튼 사용 여부 (기본값: false)"
        timestamp created_at
        timestamp updated_at
    }

    %% Clan Member (Clan-Specific User Data)
    ClanMember {
        uuid id PK
        uuid clanId FK
        uuid userId FK
        enum clanRole "MANAGER, MEMBER"
        int totalPoints "실제 보유 포인트"
        int lockedPoints "베팅으로 잠긴 포인트"
        int penaltyCount "해당 클랜 내 페널티"
        timestamp created_at
        timestamp updated_at
    }

    %% Auction Domain
    Auction {
        uuid id PK
        uuid clanId FK "Nullable"
        string title
        enum status "PENDING, READY, ONGOING, PAUSED, DRAFTING, COMPLETED, CANCELLED"
        enum visibility "PUBLIC, CLAN_ONLY"
        string accessCode "Nullable"
        uuid creatorId FK
        int startingPoints
        int turnTimeLimit
        int maxParticipants "최대 참가 인원"
        int teamCount "팀 개수"
        
        %% Real-time Status Fields
        uuid currentBiddingPlayerId FK "Nullable - 현재 경매 대상(선수)"
        timestamp currentBiddingEndTime "Nullable - 현재 턴 종료 예정 시간"
        
        timestamp created_at
        timestamp updated_at
    }

    AuctionParticipant {
        uuid id PK
        uuid auctionId FK
        uuid userId FK
        enum role "CAPTAIN, PLAYER, SPECTATOR"
        uuid teamId FK "낙찰된 팀장(소속팀)"
        int currentPoints "경매 세션용 휘발성 포인트"
        int sequence "경매 순서(선수)"
        timestamp created_at
    }

    AuctionBid {
        uuid id PK
        uuid auctionId FK
        uuid bidderId FK "Captain"
        uuid targetPlayerId FK "Player"
        int amount
        boolean isReverted "입찰 취소 여부"
        timestamp created_at
    }

    %% Point System
    PointLog {
        uuid id PK
        uuid userId FK
        uuid clanId FK "어떤 클랜의 포인트인가"
        int amount "변동액 (+/-)"
        string reason "지급/차감 사유"
        timestamp created_at
    }

    %% Scrim Domain
    Scrim {
        uuid id PK
        uuid clanId FK "Nullable"
        uuid auctionId FK "Nullable - 경매 기반 생성 시 연결"
        uuid voteId FK "Nullable - 투표 기반 생성 시 연결"
        string title
        enum status "DRAFT, SCHEDULED, IN_PROGRESS, FINISHED, CANCELLED"
        enum recruitmentType "VOTE, AUCTION, MANUAL"
        uuid hostId FK
        timestamp scheduledDate "Nullable"
        jsonb teamSnapshot "Nullable"
        int teamAScore
        int teamBScore
        timestamp created_at
        timestamp updated_at
    }

    ScrimParticipant {
        uuid id PK
        uuid scrimId FK
        uuid userId FK
        enum source "VOTE, AUCTION, MANUAL"
        enum status "PENDING, CONFIRMED, BENCH, DECLINED, REMOVED"
        enum assignedTeam "TEAM_A, TEAM_B, BENCH, UNASSIGNED"
        timestamp created_at
        timestamp updated_at
    }

    ScrimMatch {
        uuid id PK
        uuid scrimId FK
        string mapName
        int teamAScore
        int teamBScore
        string screenshotUrl "Nullable"
        string replayCode "Nullable"
        uuid mvpPlayerId FK "Nullable"
        timestamp created_at
    }

    ScrimMatchEntry {
        uuid id PK
        uuid scrimMatchId FK
        uuid userId FK
        enum team "TEAM_A, TEAM_B"
        timestamp created_at
    }

    %% Vote Domain
    Vote {
        uuid id PK
        uuid clanId FK
        uuid creatorId FK
        string title
        timestamp deadline
        enum status "OPEN, CLOSED"
        enum scrimType "NORMAL, AUCTION"
        boolean multipleChoice
        boolean anonymous
        timestamp created_at
        timestamp updated_at
    }

    VoteOption {
        uuid id PK
        uuid voteId FK
        string label
        int count
    }

    VoteRecord {
        uuid id PK
        uuid voteId FK
        uuid userId FK
        uuid optionId FK
        timestamp created_at
    }

    %% Betting System (O/X Prediction Game)
    BettingQuestion {
        uuid id PK
        uuid scrimId FK "대상 내전"
        uuid creatorId FK "OWNER/ADMIN"
        string question "예: 용훈이 20데스 이상?"
        enum status "OPEN, CLOSED, SETTLED"
        enum correctAnswer "O, X (Nullable)"
        timestamp bettingDeadline "Nullable"
        int minBetAmount "기본값: 100"
        float rewardMultiplier "보상 배율 - 기본값: 2.0"
        timestamp created_at
        timestamp updated_at
    }

    BettingTicket {
        uuid id PK
        uuid questionId FK "베팅 문항"
        uuid userId FK "베터"
        enum prediction "O, X"
        int betAmount "베팅 포인트"
        enum status "PENDING, WON, LOST, CANCELLED"
        timestamp created_at
        timestamp updated_at
    }

    %% Clan Sharing (Cross-Clan Read Access)
    ClanShare {
        uuid id PK
        uuid ownerClanId FK
        uuid viewerClanId FK
        boolean canViewAuctions
        boolean canViewScrims
        boolean canViewVotes
        timestamp created_at
    }

    %% Clan Join Request
    ClanJoinRequest {
        uuid id PK
        uuid clanId FK
        uuid userId FK
        enum status "PENDING, APPROVED, REJECTED"
        string message "Nullable"
        timestamp created_at
        timestamp updated_at
    }

    %% Blind Date Domain (소개팅 매물)
    BlindDateListing {
        uuid id PK
        uuid clanId FK
        uuid registerId FK "등록자(주선자)"
        enum status "PRIVATE, OPEN, MATCHED, CLOSED"
        string name "이름"
        int age
        enum gender "MALE, FEMALE"
        string location "거주지"
        int height "키(cm) - Nullable"
        string job "직업"
        string education "학력 - Nullable"
        text description "자기소개"
        text idealType "희망 조건"
        string mbti "MBTI - Nullable"
        string gameRole "게임 포지션 - Nullable"
        string tier "티어 - Nullable"
        jsonb mostHeroes "모스트 영웅 목록 - Nullable"
        boolean smoking "흡연 여부"
        jsonb photos "사진 URL 배열"
        string contactInfo "연락처 - Nullable"
        uuid matchedRequestId FK "매칭된 요청 - Nullable"
        int pointsEarned "획득 포인트 (기본값: 0)"
        timestamp created_at
        timestamp updated_at
    }

    BlindDateRequest {
        uuid id PK
        uuid listingId FK
        uuid requesterId FK "요청자"
        uuid clanId FK
        enum status "PENDING, APPROVED, REJECTED, CANCELLED"
        text message "요청 메시지 - Nullable"
        jsonb requesterInfo "요청자 정보 스냅샷"
        timestamp created_at
        timestamp updated_at
    }

    BlindDateMatch {
        uuid id PK
        uuid listingId FK
        uuid requestId FK
        uuid clanId FK
        uuid registerId FK "등록자"
        uuid requesterId FK "요청자"
        int pointsAwarded "지급 포인트"
        timestamp created_at
    }

    BlindDatePreference {
        uuid id PK
        uuid listingId FK "매물 - Unique"
        int minAge "최소 나이 - Nullable"
        int maxAge "최대 나이 - Nullable"
        enum preferredGender "MALE, FEMALE - Nullable"
        jsonb preferredLocations "선호 거주지 배열 - Nullable"
        jsonb preferredJobs "선호 직업 배열 - Nullable"
        enum minEducation "HIGH_SCHOOL, COLLEGE, BACHELOR, MASTER, DOCTORATE - Nullable"
        int minHeight "최소 키(cm) - Nullable"
        int maxHeight "최대 키(cm) - Nullable"
        timestamp created_at
        timestamp updated_at
    }

    %% Shop Domain (클랜 상점)
    ShopProduct {
        uuid id PK
        uuid clanId FK
        string name "상품명"
        string description "상품 설명 - Nullable"
        int price "포인트 가격"
        int stock "재고 수량"
        string imageUrl "상품 이미지 - Nullable"
        enum status "ACTIVE, INACTIVE, OUT_OF_STOCK"
        enum category "VOUCHER, GOODS, GAME_ITEM, ETC"
        int purchaseLimit "인당 구매 제한 (0: 무제한)"
        int totalSold "총 판매량 (기본값: 0)"
        timestamp created_at
        timestamp updated_at
    }

    ShopCoupon {
        uuid id PK
        uuid productId FK
        string code "쿠폰 코드 (Unique)"
        boolean isUsed "사용 여부 (할당 여부)"
        uuid assignedToUserId FK "Nullable - 할당된 유저"
        timestamp assignedAt "Nullable"
        timestamp created_at
    }

    ShopPurchase {
        uuid id PK
        uuid productId FK
        uuid userId FK "구매자"
        uuid clanId FK
        int quantity "구매 수량"
        int totalPrice "총 가격"
        enum status "PENDING, APPROVED, REJECTED, CANCELLED"
        text adminNote "관리자 메모 - Nullable"
        timestamp approvedAt "승인 시각 - Nullable"
        timestamp created_at
        timestamp updated_at
    }

    %% Relationships

    %% Clan Relationships
    Clan ||--o{ ClanMember : "has_members"
    Clan ||--|| User : "owned_by"
    Clan ||--o{ Auction : "hosts"
    Clan ||--o{ Scrim : "organizes"
    Clan ||--o{ Vote : "conducts"
    Clan ||--o{ ClanShare : "shares_info_with (as Owner)"
    Clan ||--o{ ClanShare : "views_shared_info (as Viewer)"
    Clan ||--o{ ClanJoinRequest : "receives_application_from"
    Clan ||--o{ BlindDateListing : "contains"
    Clan ||--o{ ShopProduct : "sells"

    %% User Relationships
    User ||--o{ ClanMember : "belongs_to_clans"
    User ||--o{ Auction : "creates"
    User ||--o{ Scrim : "hosts"
    User ||--o{ AuctionParticipant : "participates_in"
    User ||--o{ AuctionBid : "makes_bid (as Captain)"
    User ||--o{ AuctionBid : "is_target_of (as Player)"
    User ||--o{ Vote : "creates"
    User ||--o{ VoteRecord : "casts_vote"
    User ||--o{ ScrimParticipant : "joins_scrim_as"
    User ||--o{ ScrimMatch : "is_mvp_of"
    User ||--o{ ClanJoinRequest : "applies_to"
    User ||--o{ BlindDateListing : "registers"
    User ||--o{ BlindDateRequest : "makes_request"
    User ||--o{ ShopPurchase : "makes_purchase"
    User ||--o{ PointLog : "has_history"
    User ||--o{ ScrimMatchEntry : "participates_in_match"
    User ||--o{ BettingQuestion : "creates_questions"
    User ||--o{ BettingTicket : "places_bets"
    User ||--o{ ShopCoupon : "owns_coupon"

    %% Auction Relationships
    Auction ||--|{ AuctionParticipant : "has"
    Auction ||--o{ AuctionBid : "records"
    Auction |o--o| Scrim : "organizes_teams_for"

    %% Scrim Relationships
    Scrim ||--o{ ScrimMatch : "consists_of"
    Scrim ||--o{ ScrimParticipant : "has_participants"
    Scrim ||--o{ BettingQuestion : "has_questions"
    ScrimMatch ||--o{ ScrimMatchEntry : "has_players"

    %% Vote Relationships
    Vote ||--|{ VoteOption : "has_options"
    Vote ||--o{ VoteRecord : "tracks_votes"
    Vote ||--o| Scrim : "may_result_in"

    %% Betting Relationships
    BettingQuestion ||--o{ BettingTicket : "has_bets"

    %% Blind Date Relationships
    BlindDateListing ||--o{ BlindDateRequest : "receives_requests"
    BlindDateListing ||--o| BlindDateMatch : "results_in"
    BlindDateListing ||--o| BlindDatePreference : "has_preference"
    BlindDateRequest ||--o| BlindDateMatch : "results_in"

    %% Shop Relationships
    ShopProduct ||--o{ ShopPurchase : "has_purchases"
    ShopProduct ||--o{ ShopCoupon : "has_coupons"
